--- a/Datasets+Ocando.ipynb
+++ b/Datasets+Ocando.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4b35169a-3d4e-42fc-849f-0d7b03cbcfc3",
    "metadata": {},
    "outputs": [],
@@ -19,11 +19,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ee7cfaf-46e8-47d7-9dad-75bbf5f5c497",
+   "metadata": {},
+   "source": [
+    "# Abstract\n",
+    "\n",
+    "En el siguiente trabajo, se examina un dataset que contiene diez mil ordenes de compras para una megatienda en estados, con datos acerca del tipo de consumidor, rentabilidad de cada orden, region de la orden, etc. Con estos datos, podemos comprobar las siguientes hipotesis:\n",
+    "\n",
+    "1. El periodo del año afecta a la cantidad de compras\n",
+    "2. La rentabilidad en general de una region es afectado por la cantidad de compras.\n",
+    "3. Los productos de tecnologia tienen mayor varianza en cuanto a la rentabilidad."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d6c02618-4eea-48eb-9a0e-f2207a1061ad",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -62,8 +77,6 @@
     }
    ],
    "source": [
-    "#gun_homicide = pd.read_csv('./Datasets/Gun Homicide Information/Firearm_suicide_homicide_dataset.csv')\n",
-    "#ai_incidents = pd.read_excel('./Datasets/AIAAIC Repository.xlsx', 1)\n",
     "superstore_orders = pd.read_excel('./Datasets/Superstore.xlsx')\n",
     "\n",
     "# Dataset que contiene ordenes de compra de una megatienda en estados unidos.\n",
@@ -74,7 +87,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d1b3587f-e1c3-4fc9-ad19-0a6262ac0c0e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -113,7 +128,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "f249577f-8e4c-4505-a740-33d3e235f80d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -280,7 +297,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "50fdb347-b5f8-4d75-b825-e86985a33c54",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -422,7 +441,10 @@
   {
    "cell_type": "markdown",
    "id": "51c770cd-b10d-4b2e-978d-49609e8b41d8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Ventas Por Estado"
    ]
@@ -431,7 +453,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "e2b86dc7-16ff-421d-81d0-0789bfebe5a5",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -475,7 +503,10 @@
   {
    "cell_type": "markdown",
    "id": "108c31b0-162b-42fe-a439-cff27ac1b7e6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Rentabilidad por Estado"
    ]
@@ -484,7 +515,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "577baa33-489e-4793-b61b-081a62d291d5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -529,7 +562,10 @@
   {
    "cell_type": "markdown",
    "id": "8367fa86-81ac-4ead-87e9-a25be44fc998",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Ventas en Relacion a Rentabilidad"
    ]
@@ -578,7 +614,10 @@
   {
    "cell_type": "markdown",
    "id": "b6e93bb8-6cba-4ace-9ce0-1bb4b4cea9b4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Rentabilidad contra porcentaje de descuento"
    ]
@@ -635,7 +674,10 @@
   {
    "cell_type": "markdown",
    "id": "417fb4aa-3dcd-4378-805a-ae8808239aed",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Ventas por fecha"
    ]
@@ -689,7 +731,10 @@
   {
    "cell_type": "markdown",
    "id": "c3e35c81-be6f-4620-9f81-67cd894ddf1c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Rentabilidad por Region y Categoria"
    ]
